Fixed blue highlight clicking buttons on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@
   align-items: center;
   flex-direction: column;
 }
+.body * {
+  -webkit-tap-highlight-color: transparent;
+}
 
 @media screen and (max-width: 720px) {
   .app {
